git feat 添加log4j2,调整控制台动态输出到日志